@@ -5,33 +5,32 @@ import com.itmo.java.basics.console.ExecutionEnvironment;
 import com.itmo.java.basics.logic.Database;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
 
 public class ExecutionEnvironmentImpl implements ExecutionEnvironment {
-
-    private final DatabaseConfig dbConfig;
-    private final Map<String, Database> dataBase ;
+    private final DatabaseConfig config;
+    private final Map<String, Database> databases;
 
     public ExecutionEnvironmentImpl(DatabaseConfig config) {
-
-        dbConfig = config;
-        dataBase = new HashMap<>();
+        this.config = config;
+        databases = new HashMap<>();
     }
 
     @Override
     public Optional<Database> getDatabase(String name) {
-        return Optional.ofNullable(dataBase.get(name));
+        return Optional.ofNullable(databases.get(name));
     }
 
     @Override
     public void addDatabase(Database db) {
-        dataBase.put(db.getName(), db);
+        databases.put(db.getName(), db);
     }
 
     @Override
     public Path getWorkingPath() {
-        return Path.of(dbConfig.getWorkingPath());
+        return Paths.get(config.getWorkingPath());
     }
 }
